--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 body {
     font-family: "Roboto", sans-serif;
     color: var(--main-text-color);
+    background-color: var(--second-text-color);
 }
 
 .link {
@@ -43,20 +44,20 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--logo-color);
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 
 .header-logo-part{
-    color: var(--title-color)
+    color: var(--title-color);
 }
 
 .header-menu-item{
         font-family: 'Roboto';
         font-weight: 500;
         font-size: 16px;
-        line-height: 1.50;
+        line-height: 1.5;
         letter-spacing: 0.02em;
-        color: var(--hover-color);
+        color: var(--title-color);
 }
 
 
