--- a/css/styles.css
+++ b/css/styles.css
@@ -143,12 +143,13 @@ color: var(--second-text-color);
 
 .products-title {
     font-size: 36px;
-        line-height: 1.11;
-        text-align: center;
-        letter-spacing: 0.02em;
-        color: var(--title-color);
-        text-transform: capitalize;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.2em;
+    color: var(--title-color);
+    text-transform: capitalize;
 }
+       
 
 .products-list {}
 
@@ -171,6 +172,10 @@ color: var(--second-text-color);
 
 .team-list {
 background-color: var(--second-text-color);
+}
+
+.team-item {
+    background-color: var(--title-color);
 }
 
 .footer {
