--- a/css/styles.css
+++ b/css/styles.css
@@ -24,17 +24,17 @@ body {
 
 .subtitle {
     font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: var(--title-color);
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--title-color)
 }
 
 .text {
     font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--main-text-color);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
 }
 
 .header-logo {
@@ -54,16 +54,16 @@ body {
 
 .header-menu-link {
     font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--title-color);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--tittle-color);
 }
 
 
 .header-soc-link:hover, 
 .header-soc-link:focus {
-color: #404BBF
+color: var(--hover-color);
 }
 
 .address {
