--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,13 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--title-color);
+    color: #434455;
 }
 
 
 .header-menu-link:hover, 
 .header-menu-link:focus {
-color: var(--hover-color);
+color: #434455;
 }
 
 .address {
