--- a/css/styles.css
+++ b/css/styles.css
@@ -76,12 +76,12 @@ font-style: normal;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #434455;
+        color: var(--main-text-color);
 }
 
 .addres-soc-link:hover, 
 .addres-soc-link:focus {
-    color: #404BBF;
+    color: var(--hover-color);
 }
 
 
