--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ color: #404BBF;
 font-style: normal;
 }
 
-.address-soc-link {
+.address-list-link {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
