--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color)
+    
 }
 
 .text {
@@ -244,7 +245,7 @@ color: var(--second-text-color);
 
 .benefits-item {
     
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 /* products */
@@ -272,7 +273,26 @@ color: var(--second-text-color);
 .list{}
 
 .products-item {
-    width: calc((100%-48px) / 3);
+    width: calc((100% - 8px) / 3);
+}
+
+.link-menu {
+    padding: 32px 16px;
+    border-top: none;
+    border: 1px solid #E7E9FC;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 /* team */
@@ -305,7 +325,7 @@ text-align: center;
 
 .team-item {
 background-color: #FFFFFF;
-width: calc((100%-72px) / 4);
+width: calc((100% - 72px) / 4);
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
 }
@@ -324,7 +344,7 @@ border-radius: 0px 0px 4px 4px;
 
 
 .team-item-text {
-    font-size: 1.5;
+    font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
     background-color: #FFFFFF;
