--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color)
+    margin-bottom: 8px;
     
 }
 
@@ -136,7 +137,7 @@ font-style: normal;
 gap: 40px;
 }
 
-.img {
+ img {
     display: block;
 }
 
@@ -144,8 +145,7 @@ gap: 40px;
 
 .hero {
  background-color: var(--title-color);
- padding-top: 120px;
- padding-bottom: 120px;
+ padding: 188px 0;
 }
 
 .hero-container {
@@ -243,8 +243,7 @@ border: 1px solid transparent;
 /* benefits */
 
 .benefits {
-    margin-top: 120px;
-    margin-bottom: 120px;
+    padding: 120px 0;
 }
 
 .benefits-list {
@@ -259,8 +258,13 @@ border: 1px solid transparent;
 
 /* products */
 
+.main {
+    padding-top: 96px;
+        padding-bottom: 120px;
+}
+
 .products {
-    margin-bottom: 120px;
+    padding-bottom: 120px;
 }
 
 .products-title {
@@ -270,13 +274,15 @@ border: 1px solid transparent;
     letter-spacing: 0.2em;
     color: var(--title-color);
     text-transform: capitalize;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
     min-width: 323px;
+    margin: 0 auto;
 }
        
 
 .products-list {
     display: flex;
+    gap: 24px;
 }
 
 .list{}
@@ -376,6 +382,8 @@ padding-bottom: 100px;
             letter-spacing: 0.03em;
             color: var(--logo-color);
             text-transform: uppercase;
+            display: inline-block;
+            margin-bottom: 16px;
 }
 
 .footer-logo span {
@@ -391,6 +399,5 @@ padding-bottom: 100px;
         padding-top: 16px;
 }
 .footer-logo link {
-display: inline-block;
 margin-bottom: 16px;
 }
