--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ border: 1px solid transparent;
 
 .team {
     background: #F4F4FD;
-    padding: 120px 0px 0px 0px;
+    padding: 120px 0;
 }
 
 .team-container {
@@ -328,31 +328,35 @@ border: 1px solid transparent;
             letter-spacing: 0.02em;
             text-transform: capitalize;
             margin-bottom: 72px;
-            padding-top: 120px;
+}
+.main-info {
+    padding: 32px 16px;
+    text-align: center;
 }
 
 .team-list {
 display: flex;
 gap: 24px;
 padding-bottom: 120px;
-text-align: center;
 }
 
 .team-item {
 background-color: #FFFFFF;
 width: calc((100% - 72px) / 4);
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
 }
 
 .team-subtitle {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.20;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
     padding-bottom: 32px;
-    padding-top: 32px;
+    margin-bottom: 8px;
     
 
 }
@@ -360,10 +364,8 @@ border-radius: 0px 0px 4px 4px;
 
 .team-item-text {
     font-size: 16px;
-    line-height: 24px;
     letter-spacing: 0.02em;
     background-color: #FFFFFF;
-    padding-bottom: 32px;
 }
 
 /* footer */
