--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ font-style: normal;
 .address-soc {
     display: flex;
     margin-left: 40px;
-gap: 40px;
+    gap: 40px;
 }
 
  img {
@@ -230,7 +230,8 @@ border: 1px solid transparent;
 .projects-menu {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 
 .project-item {
@@ -284,13 +285,13 @@ border: 1px solid transparent;
 .list{}
 
 .products-item {
-    width: calc((100% - 8px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .link-menu {
     padding: 32px 16px;
-    border-top: none;
     border: 1px solid #E7E9FC;
+    border-top: none;
 }
 
 .visually-hidden {
