--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ border: 1px solid transparent;
     text-transform: capitalize;
     margin-bottom: 72px;
     margin: 0 auto;
+    margin-bottom: 72px;
 }
        
 
@@ -285,7 +286,7 @@ border: 1px solid transparent;
 
 .list{}
 
-.products-item {
+.projects-item {
     width: calc((100% - 48px) / 3);
 }
 
